2008-11-14  Jonathon Jongsma  <jonathon@quotidian.org>

	* configure.in: support the --with-boost=[boost_path] option for specifying
	the install path of boost libraries

2008-10-30  Dave Evans <devans@macports.org>

	* cairomm/fontface.h:
	* cairomm/surface.h: fix compile in mac osx by undefining the 'nil' symbol
	before including any sigc++ headers.  In the future this should become
	necessary if sigc++ headers do this directly, but for now work around it in
	cairomm

2008-10-29  Jonathon Jongsma  <jonathon@quotidian.org>

	* Makefile.am: distribute autogen.sh with the tarballs

2008-10-25  Jonathon Jongsma  <jonathon@quotidian.org>

	* configure.in:
	* data/Makefile.am:
	* tests/Makefile.am: fix some distcheck failures (pkg-config files and
	unit-test-generated images were not removed on distclean)

2008-10-25  Jonathon Jongsma  <jonathon@quotidian.org>

	* NEWS: explicitly mention that 1.7.0 is an unstable release

2008-10-22  Jonathon Jongsma  <jonathon@quotidian.org>

	* NEWS: add news for 1.7.x release

2008-10-22  Jonathon Jongsma  <jonathon@quotidian.org>

	* cairomm/matrix.h: add a link to the cairo reference for cairo_matrix_t
	* docs/reference/Doxyfile.in: don't generate docs for the members of the
	Cairo::Private namespace

2008-10-22  Jonathon Jongsma  <jonathon@quotidian.org>

	* configure.in: bump version to 1.7.0

2008-10-22  Jonathon Jongsma  <jonathon@quotidian.org>

	* cairomm/context.cc:
	* cairomm/context.h: add an overloaded get_matrix() function that returns a
	copy of the matrix for convenience
	* tests/test-context.cc: excercise the API

2008-10-22  Jonathon Jongsma  <jonathon@quotidian.org>

	* .gitignore:
	* Makefile.am:
	* configure.in: moved pkgconfig files to a data subdirectory, and consolidated
	all dependency checks into one PKG_CHECK_MODULES call so that we don't have
	duplicate libs or flags in the compiler command line due to checking all of
	teh deps individually and then aggregating them
	* data/Makefile.am: Added.